@@ -1,6 +1,7 @@
 package com.ppurin.ppurin.like;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,9 +28,9 @@ public class LikeService {
     @Transactional
     public boolean toggleLike(Long userId, Long postId) {
         KakaoUserEntity user = kakaoRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+                .orElseThrow(() -> new IllegalArgumentException("User not found with ID: " + userId));
         PostEntity post = postRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("Post not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Post not found with ID: " + postId));
 
         if (likeRepository.existsByUserIdAndPostId(userId, postId)) {
             // 이미 좋아요한 경우 삭제
@@ -43,17 +44,19 @@ public class LikeService {
         }
     }
 
+    // 좋아요한 게시글 가져오기
     @Transactional(readOnly = true)
     public List<LikeDTO> getLikedPostsByUser(Long userId) {
         return likeRepository.findAllByUserId(userId).stream()
+                .filter(like -> like.getPost() != null) // PostEntity가 존재하는 경우만 반환
                 .map(like -> new LikeDTO(
                         like.getId(),
                         like.getUser().getId(),
-                        like.getPost().getId(),
+                        like.getPost().getId(), // 존재하는 PostEntity의 ID
                         like.getPost().getTitle(),
                         like.getPost().getImageUrl(),
-                        like.getPost().getDate() // 추가
+                        like.getPost().getDate() // PostEntity에서 LocalDate로 저장된 날짜를 가져옴
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
